--- a/src/front/game.html
+++ b/src/front/game.html
@@ -1231,7 +1231,7 @@
         </div>
     </div>
 
-    <script src="./chat.js"></script>
-    <script src="./game.js"></script>
+    <script src="./chat.js?v=2"></script>
+    <script src="./game.js?v=2"></script>
 </body>
 </html>
